rearrange CSS stack

--- a/map.html
+++ b/map.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple Map</title>
+    <title>Maps</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <script async src="js/map.js"></script>    
   </head>
    <body>
@@ -19,13 +19,13 @@
         </ul>
       </nav>
     </header>
-    <div id="wrapper">
-    <div id="canvas"></div>
-    </div>
     <h1>My Home Town of Oak Park</h1>
     <div id="map">
      <script src="https://maps.googleapis.com/maps/api/js?AIzaSyBM1F-BpX660SBK3-Vw9O9f7AEvTAIH8rI&callback=initMap">
      </script>
     </div>
+    <footer>
+			<p>Created by <a href="index.html"><em>Nicholas Thomas</em></a></p>
+		</footer>	
   </body>
 </html>
