footer issues on maps

--- a/hobbies.html
+++ b/hobbies.html
@@ -22,17 +22,17 @@
 		<section id="Drawing">
 			<h2>Drawing</h2>
 			<img src="media/hitch.jpg" id="img1" alt="Pencil drawing of Christopher Hitchens">			
-			<p><b><em>I've been drawing casually for about 10 years now. Although I don't do it as much anymore, I still enjoy it</em></b></p>	
+			<p><em>I've been drawing casually for about 10 years now. Although I don't do it as much anymore, I still enjoy it</em></p>	
 		</section>
 		<section id="Skateboarding">
 			<h2 class="skate">Skateboarding</h2>
 			<img src="media/ollie.jpg" id="img2" alt="skateboarding down Verizon gap in Chicago, Illinois">			
-			<p><b><em>I've been skateboarding for about 15 years and it's still one of my favorite things to do</em></b></p>						
+			<p><em>I've been skateboarding for about 15 years and it's still one of my favorite things to do</em></p>						
 		</section>
 		<section id="Traveling">
 			<h2 class="travels">Traveling</h2>
 			<img src="media/mountain.jpg" id="img3" alt="Hiking up Mount Rainer in Washington State">
-			<p><b><em>I've been just about everywhere in the United States. Traveling is one of my favorite things to do</em></b></p>	
+			<p><em>I've been just about everywhere in the United States. Traveling is one of my favorite things to do</em></p>	
 		</section>	
 		<footer>
 			<p>Created by <a href="index.html"><em>Nicholas Thomas</em></a></p>
