--- a/life.html
+++ b/life.html
@@ -5,7 +5,7 @@
 		<title>Life</title>
 		 <link href='https://fonts.googleapis.com/css?family=Devonshire' rel='stylesheet' type='text/css'>
      <link rel="stylesheet" type="text/css" href="css/reset.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">  
+     <link rel="stylesheet" type="text/css" href="css/style.css">  
 	</head>
 	<body>
 		<header class="nav">
@@ -69,7 +69,7 @@
 			</ul>
 				<img src="media/lobos.jpg" id="cali" alt="Southern California State Park Preserve">			
 		</section>
-		<section id="Goals">
+		<section id="goals">
 			<h2>My Goals</h2>
 			<ol class="goals">
 				<li>Get an internship</li>
