added arrow market

--- a/map.html
+++ b/map.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="https://maps.googleapis.com/maps/api/js?AIzaSyBM1F-BpX660SBK3-Vw9O9f7AEvTAIH8rI&callback=initMap"></script>
     <script async src="js/map.js"></script>    
   </head>
    <body>
@@ -20,9 +21,10 @@
       </nav>
     </header>
     <h1>My Home Town of Oak Park</h1>
+    <div id="wrapper">
+     <div id="canvas"></div>
+    </div>    
     <div id="map">
-     <script src="https://maps.googleapis.com/maps/api/js?AIzaSyBM1F-BpX660SBK3-Vw9O9f7AEvTAIH8rI&callback=initMap">
-     </script>
     </div>   
-  </body>
+  </body>	
 </html>
