Fixed my Content String

--- a/map.html
+++ b/map.html
@@ -20,11 +20,8 @@
         </ul>
       </nav>
     </header>
-    <h1>My Home Town of Oak Park</h1>
-    <div id="wrapper">
-     <div id="canvas"></div>
-    </div>    
-    <div id="map">
-    </div>   
-  </body>	
+    <h1>My Favorite Spots in Oak Park</h1>
+    <div id="canvas"></div>       
+    <div id="map"></div>          
+  </body>  
 </html>
