update to hobbies page(hitch image)

--- a/hobbies.html
+++ b/hobbies.html
@@ -2,10 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Hobbies</title>
-		 <link href='https://fonts.googleapis.com/css?family=Devonshire' rel='stylesheet' type='text/css'>
-     <link rel="stylesheet" type="text/css" href="css/reset.css">
-		 <link rel="stylesheet" type="text/css" href="css/style.css">    
+		<title>Hobbies</title>     
+    <link href='https://fonts.googleapis.com/css?family=Devonshire' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">    
 	</head>
 	<body>
 		<header class="nav">
@@ -21,13 +21,13 @@
 		<h1>Hobbies</h1>
 		<section id="Drawing">
 			<h2>Drawing</h2>
-			<img src="media/hitch.jpg" id="img1" alt="Pencil drawing of Christopher Hitchens">			
+      <img src="media/hitch.jpg" id="img1" alt="Pencil drawing of Christopher Hitchens">	
 			<p><em>I've been drawing casually for about 10 years now. Although I don't do it as much anymore, I still enjoy it</em></p>	
 		</section>
 		<section id="Skateboarding">
 			<h2 class="skate">Skateboarding</h2>
 			<img src="media/ollie.jpg" id="img2" alt="skateboarding down Verizon gap in Chicago, Illinois">			
-			<p><em>I've been skateboarding for about 15 years and it's still one of my favorite things to do</em></p>						
+			<p><em>I've n skateboarding for about 15 years and it's still one of my favorite things to do</em></p>						
 		</section>
 		<section id="Traveling">
 			<h2 class="travels">Traveling</h2>
