--- a/map.html
+++ b/map.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Maps</title>
     <meta name="viewport" content="initial-scale=1.0">
