--- a/map.html
+++ b/map.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="https://maps.googleapis.com/maps/api/js?AIzaSyBM1F-BpX660SBK3-Vw9O9f7AEvTAIH8rI&callback=initMap"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">   
     <script async src="js/map.js"></script>    
   </head>
    <body>
@@ -22,6 +21,8 @@
     </header>
     <h1>My Favorite Spots in Oak Park</h1>
     <div id="canvas"></div>       
-    <div id="map"></div>          
+    <div id="map"></div> 
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIWGeBWMq1N3gGBBltdTBS1D953KC2S0o&loading=async&callback=initMap" async defer></script>
+         
   </body>  
 </html>
